# duelyst-ai-core

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: github-instructions.md  release.yml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PHASE_2_3_PLAN.md  PRD_duelyst_ai.md
examples/: README.md  basic_debate.py  custom_debate.py  json_output.py  streaming_debate.py
src/duelyst_ai_core/: __init__.py  _runtime.py  exceptions.py
src/duelyst_ai_core/agents/: __init__.py  debater.py  judge.py  prompts.py  schemas.py
src/duelyst_ai_core/cli/: __init__.py  display.py  live_panel.py  main.py
src/duelyst_ai_core/formatters/: __init__.py  base.py  json_fmt.py  markdown.py  rich_terminal.py
src/duelyst_ai_core/models/: __init__.py  anthropic.py  base.py  google.py  openai.py  registry.py
src/duelyst_ai_core/orchestrator/: __init__.py  callbacks.py  convergence.py  engine.py  events.py  state.py
src/duelyst_ai_core/tools/: __init__.py  search.py
tests/: conftest.py
tests/integration/: conftest.py
tests/test_agents/: test_debater.py  test_judge.py  test_prompts.py
tests/test_cli/: test_display.py  test_main.py
tests/test_formatters/: test_json.py  test_markdown.py  test_rich.py
tests/test_models/: test_adapters.py  test_registry.py  test_schemas.py
tests/test_orchestrator/: test_callbacks.py  test_convergence.py  test_engine.py  test_events.py  test_streaming.py
tests/test_tools/: test_search.py
